@startuml
    namespace com.hack23.cia.web.impl.ui.application.views.user.ballot.pagemode {

        class BallotChartsPageModContentFactoryImpl [[BallotChartsPageModContentFactoryImpl.html]] {
            +createContent(String, MenuBar, Panel): Layout
            +matches(String, String): boolean
        }

        class BallotOverviewPageModContentFactoryImpl [[BallotOverviewPageModContentFactoryImpl.html]] {
            +createContent(String, MenuBar, Panel): Layout
            +matches(String, String): boolean
        }

        com.hack23.cia.web.impl.ui.application.views.common.pagemode.AbstractItemPageModContentFactoryImpl <|-- BallotChartsPageModContentFactoryImpl
        com.hack23.cia.web.impl.ui.application.views.common.pagemode.AbstractItemPageModContentFactoryImpl <|-- BallotOverviewPageModContentFactoryImpl
    }

    namespace com.hack23.cia.web.impl.ui.application.views.common.pagemode {
        abstract class AbstractItemPageModContentFactoryImpl<T> [[../../../common/pagemode/AbstractItemPageModContentFactoryImpl.html]] {
            {abstract} #getItem(String): T
        }
    }

    center footer UMLDoclet 2.0.12, PlantUML 1.2020.16
@enduml
